# ufc-api

./: .gitignore  .google-cookie  LICENSE.txt  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  ufc.py
ufc_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
